--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,6 @@ body{
 }
 
 #container{
-  /* background-color: red; */
   display: flex;
   flex-direction: column;
   align-items: start;
@@ -125,8 +124,7 @@ body{
   gap: 1rem;
   padding: 1rem;
   width: 100%;
-  /* max-width: 400px; Largeur maximale pour une meilleure lisibilité */
-  /* margin: 0 auto; */
+  margin-top: 8%;
 }
 
 #cart-container h2 {
@@ -211,5 +209,11 @@ hr {
 @media screen and (min-width: 768px) {
   #container {
     flex-direction: row;   
+     align-items: flex-start;
   }
+}
+
+.product-image{
+  width: 80%;
+  height: 80%;
 }
